Default theme customisations

--- a/helpers/drawers/account.html
+++ b/helpers/drawers/account.html
@@ -5,7 +5,7 @@
 	</header>
 	<div class="DrawerNavigation">
 		{CustomerNavigation(
-			register: 'true'
+			register: 'false'
 		)}
 	</div>
 </div>
