--- a/helpers/footer.html
+++ b/helpers/footer.html
@@ -8,19 +8,6 @@
 	<div class="ContainerMaxWidth">
 		<div class="FooterDesktop">
 			<div class="FooterItems">
-				<div class="FooterItem FooterItem-Logo">
-					{Helper(
-						before: '<div class="FooterLogo">',
-						after: '</div>',
-						file: 'helpers/logo'
-					)}
-					{Banners(
-						name: 'social-media-buttons',
-						before: '<div class="ExternalLinks ExternalLinks-Desktop">',
-						after: '</div>',
-						helper: 'helpers/external-link-icon'
-					)}
-				</div>
 				<div class="FooterItem FooterItem-Contact">
 					<div class="FooterItem">
 						<h2 class="FooterTitle">{%ContactUs}</h2>
@@ -43,15 +30,6 @@
 			</div>
 		</div>
 		<div class="FooterMobile">
-			<div class="FooterLogo FooterMobileLogo">
-				{Helper(file: 'helpers/logo')}
-			</div>
-			{Banners(
-				name: 'social-media-buttons',
-				before: '<div class="ExternalLinks ExternalLinks-Mobile">',
-				after: '</div>',
-				helper: 'helpers/external-link-icon'
-			)}
 			<details class="Accordion">
 				<summary><h2>{%ContactUs}</h2></summary>
 				{BannerText(
@@ -71,7 +49,7 @@
 			)}
 		</div>
 		<div class="FooterCopyright">
-			<p><span class="Copyright">Copyright &copy; {ShopName}</span> {MyCashflowTextAd(before: '<br><span class="MyCashflowTextAd">', after: '</span>')}</p>
+			<p><span class="Copyright">Copyright &copy; {ShopName}</span></p>
 			{Helper(file: 'helpers/klarna-osm/footer-{Setting(name: 'klarna_osm_footer')}')}
 		</div>
 	</div>
