--- a/helpers/header.html
+++ b/helpers/header.html
@@ -10,6 +10,6 @@
 	}}'
 )}
 <div class="SiteTop"></div>
-{Helper(file: 'helpers/utility-bar')}
+<!-- {Helper(file: 'helpers/utility-bar')} -->
 {Helper(file: 'helpers/headers/header-logo-center-fullnav')}
 
