--- a/helpers/styles.html
+++ b/helpers/styles.html
@@ -7,7 +7,8 @@
 		styles/common/base.css|
 		styles/common/typography.css|
 		styles/common/form.css|
-		styles/common/extensions.css'
+		styles/common/extensions.css|
+		styles/common/customisation.css'
 )}
 {MinifyCSS(
 	mode: 'production',
