--- a/helpers/head.html
+++ b/helpers/head.html
@@ -1,7 +1,23 @@
 <meta charset="utf-8">
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','{%GoogleTagManager}');</script>
+<!-- End Google Tag Manager -->
+
+
+<script type="text/javascript" src="/files/{Theme}/scripts/{%NewRelic}"></script>
+
+
+
 <title>{Title}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="{MetaDescription}">
+<meta name="description" content="{MetaDescription(
+    or: 'Sopimusmallit.com tarjoaa käyttöösi laajan valikoiman asiakirja- ja sopimusmalleja kilpailukykyiseen hintaan.'
+)}">
 {Feed}
 <link rel="canonical" href="{ShopUrl}{CanonicalUrl}" />
 {Favicon}
